# olex2-htm-parser

./: .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  h3-refine_NoSpherA2-extras.htm  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-html_olex2htm.h  tree-sitter-html_olex2htm.pc.in  tree-sitter-olex2htm.pc.in  tree-sitter-olex_htm.h  tree-sitter-olex_htm.pc.in
bindings/c/tree_sitter/: tree-sitter-olex2htm.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_html/: __init__.py
bindings/python/tree_sitter_html_olex2htm/: __init__.py  binding.c
bindings/python/tree_sitter_olex2htm/: __init__.py  binding.c
bindings/python/tree_sitter_olex_htm/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHtmlOlex2htmTests/: TreeSitterHtmlOlex2htmTests.swift
bindings/swift/TreeSitterOlex2htmTests/: TreeSitterOlex2htmTests.swift
bindings/swift/TreeSitterOlexHtmTests/: TreeSitterOlexHtmTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
