[package]
name = "tree-sitter-olex2htm"
description = "Olex2htm grammar for tree-sitter"
version = "0.1.0"
authors = ["Lucas Militão <lucas.milito@usp.br>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "olex2htm"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/militaolucas/olex2-htm-parser.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.4"
